# opensim-tools

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: OpenSim.ini  StandaloneCommon.ini
docs/: architecture.md
scripts/: backup-db.sh  healthcheck.sh
src/opensim_tools/region/: ini.py  model.py
src/opensim_tools/terrain/: __init__.py  ascii_grid.py  builder.py  cli.py  model.py  mosaic.py  normalize.py  os_grid.py  preview.py  project.py  r32.py  resample.py
systemd/: opensim.service
tests/: conftest.py  test_model.py  test_mosaic.py  test_os_grid.py  test_region_ini.py  test_region_model.py  test_terrain_mosaic.py  test_terrain_project.py
