[project]
name = "opensim-tools"
version = "0.7.1"
description = "Modern Python toolkit for OpenSimulator administration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gary Round" }
]
dependencies = [
    "click",
    "numpy",
    "pillow",
]

[project.scripts]
opensim-terrain = "opensim_tools.terrain.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
